# MCPOrb

./: .gitignore  Cargo.toml  NOTICE  README.md  dev-plan.md
.github/workflows/: ci.yml
crates/mcporb-cli/: Cargo.toml
crates/mcporb-cli/src/: main.rs
crates/mcporb-core/: Cargo.toml
crates/mcporb-core/benches/: bm25_bench.rs
crates/mcporb-core/src/: bm25.rs  builder.rs  chunker.rs  error.rs  format.rs  lib.rs
crates/mcporb-core/src/importer/: markdown.rs  mod.rs  pdf.rs
crates/mcporb-core/tests/: bm25_test.rs  ingestion_test.rs
crates/mcporb-embed/: Cargo.toml
crates/mcporb-embed/examples/: download.rs  smoke.rs
crates/mcporb-embed/src/: downloader.rs  embedder.rs  lib.rs  model.rs
crates/mcporb-runtime/: Cargo.toml  build.rs
crates/mcporb-runtime-core/: Cargo.toml
crates/mcporb-runtime-core/src/: bm25.rs  format.rs  lib.rs  runtime.rs  search.rs  tfidf.rs  trigram.rs  vector.rs
crates/mcporb-runtime-core/tests/: multi_search_test.rs
crates/mcporb-runtime/src/: api.rs  assets.rs  embed_startup.rs  main.rs  mcp_handler.rs  startup.rs  state.rs  web_server.rs
crates/mcporb-runtime/web_assets/: index.html
crates/mcporb-size-spike/: Cargo.toml
crates/mcporb-size-spike/src/: main.rs
crates/mcporb-wizard-gui/: Cargo.toml
crates/mcporb-wizard-gui/src/: main.rs
public-orb/: README.md
public-orb/AI-Governance/: README.md
public-orb/AI-Governance/sources/: AI_Governance_Control_Compendium.md
public-orb/AI-Governance/sources/others/: AI_Governance_Bilingual_FAQ.md  AI_Governance_Glossary.md  AI_Governance_Launch_Readiness_Checklist.md  AI_Governance_Risk_Scenario_Library.md  EC_AI_Act_Overview.docx  EC_AI_Act_Overview.html  NIST_AI_RMF_Playbook.html
public-orb/MDA/: MDA_ModelDrivenArchitecture_Guide_v1.0.1.orb  README.md
scripts/: build-builder-runtimes.sh  check-binary-size.sh
tests/fixtures/: mda_queries.toml  synthetic.md
