[workspace]
members = [
    "crates/mcporb-runtime",
    "crates/mcporb-runtime-core",
    "crates/mcporb-size-spike",
    "crates/mcporb-embed",
]
resolver = "2"

[workspace.dependencies]
rmcp = { version = "0.1", features = ["server"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1"
rand = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
unicode-segmentation = "1"
pdf-extract = "0.7"
lopdf = "0.34"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
instant-distance = "0.6.1"
# mcporb-embed (vector search query embedder, see plans/vector-search-spec.md)
# Pinned to local d-tract clone with LayerNorm F16 fix
# (see d-tract/onnx/src/ops/nn/layer_norm.rs — cast back to fact.datum_type
# AFTER scale/bias, not before, so F16 inputs produce F16 outputs).
tract-onnx = { path = "../d-tract/onnx" }
tokenizers = "0.20"
ndarray = "0.15"
arc-swap = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
tar = "0.4"
zstd = "0.13"
sha2 = "0.10"
futures-util = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
