[package]
name = "mcporb-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcporb"
path = "src/main.rs"

[dependencies]
mcporb-core = { path = "../mcporb-core" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
postcard = { workspace = true }
serde_json = { workspace = true }
