[package]
name = "mcporb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }
pdf-extract = { workspace = true }
lopdf = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
postcard = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bm25_bench"
harness = false
