[package]
name = "mcporb-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "mcporb-runtime"
path = "src/main.rs"

[dependencies]
mcporb-runtime-core = { path = "../mcporb-runtime-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
webbrowser = { workspace = true }
rust-embed = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
postcard = { workspace = true }
