[package]
name = "mcporb-size-spike"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcporb-size-spike"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
