[package]
name = "mcporb-wizard-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcporb-wizard"
path = "src/main.rs"

[dependencies]
mcporb-core = { path = "../mcporb-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
